--- a/demo/dev/index.htm
+++ b/demo/dev/index.htm
@@ -111,6 +111,16 @@
     </div>
 
     <div class="options">
+        <form id="experiences">
+            <strong>Experiences</strong>
+            <input type="radio" id="experiences-standard" name="width" value="standard" checked />
+            <label for="shapes-rect">standard</label>
+            <input type="radio" id="experiences-inline" name="width" value="inline" />
+            <label for="shapes-rect">inline</label>
+        </form>
+    </div>
+
+    <div class="options">
         <button onclick="toggleAll(true)"> Select All </button>
         <button onclick="toggleAll(false)"> Clear All </button>
         <button onclick="generateButtons()">
@@ -127,6 +137,7 @@
         let labels = [];
         let instruments = [];
         let shapes = [];
+        let experiences = [];
         function generateButtons () {
             const currentButtons = document.querySelectorAll('p');
             if(currentButtons.length) {
@@ -152,6 +163,7 @@
             loopForCheckedIntoArray('labels',labels);
             loopForCheckedIntoArray('instruments',instruments);
             loopForCheckedIntoArray('shapes',shapes);
+            loopForCheckedIntoArray('experiences',experiences);
 
             const markOpts = [
                 {
@@ -180,7 +192,7 @@
             const buttonOpts = [];
 
             for (const color of colors) {
-                buttonOpts.push({
+                const config = {
                     style: {
                         color
                     },
@@ -206,7 +218,19 @@
                             eligible: true
                         }
                     }
-                });
+                };
+
+                if (document.querySelector('#experiences-inline').checked) {
+                    config.style.custom = {
+                        label: 'Checkout'
+                    };
+                    config.experience = 'inline';
+                    config.onComplete = () => {
+                        return true;
+                    };
+                }
+
+                buttonOpts.push(config);
             }
 
             for (const label of labels) {
@@ -594,6 +618,14 @@
                 }
             }
 
+            colors = [];
+            widths = [];
+            fis = [];
+            taglines = [];
+            labels = [];
+            instruments = [];
+            shapes = [];
+            experiences = [];
         };
        
 
